Fix diagram.hoveredNode and prevent text wrapping when the context menu is too close to the right side of the screen

--- a/packages/helveg-explorer/styles/_context-menu.scss
+++ b/packages/helveg-explorer/styles/_context-menu.scss
@@ -28,6 +28,7 @@
 
             span {
                 padding-left: 2rem;
+                text-wrap: nowrap;
             }
         }
     }
